Final Stuffs part 1
TODO
- Poplar shelf texture
- Cold animals variant on dappled forest
- Add grass to the dappled forest
- Refining the last features